# cash-ctrl-backend

./: .env.dev  .env.example  .gitignore  CONTRIBUTING.md  DEPLOYMENT.md  Dockerfile  FEATURES.md  GCLOUD_DEPLOYMENT.md  README.md  alembic.ini  celerybeat-schedule.dir  check.txt  docker-compose.yml  entrypoint.sh  inspect_routes.py  inspect_tags.py  main.py  nginx.conf  openapi_dump.json  path_keys.txt  pyproject.toml  pytest.ini  requirements-test.txt  requirements.txt  routes_output.txt  routes_output_v2.txt  run.py  schema_debug_v2.yml  test_output.tmp  web_logs.txt
accounts/: admin.py  models.py  serializers.py  urls.py  views.py
analytics/: admin.py  admin_urls.py  admin_views.py  models.py  services.py  urls.py  views.py
app/: celery.py  dashboard.py  main.py  middleware.py  schema_hooks.py  settings.py  urls.py  views.py  worker.py
audit/: admin.py  models.py  services.py
backend/: .env.example  README.md  endpoints.txt  pyproject.toml  run.py
backend/app/: main.py
backend/app/api/: middleware.py
backend/app/api/v1/: analytics.py  categories.py  data.py  mfa.py  notifications.py  p2p.py  transactions.py
backend/app/core/: auth.py  config.py  exceptions.py  logging.py  users.py
backend/app/db/: init_db.py  mixins.py  session.py  user_db.py
backend/app/models/: budget.py  debt.py  recurring_transaction.py  tag.py  transaction.py  user.py  user_preference.py
backend/app/repositories/: base_repository.py  transaction_repository.py
backend/app/schemas/: account.py  notification.py  p2p.py  user.py
backend/app/services/: analytics_service.py  audit_service.py  category_service.py  gamification_service.py  goal_service.py  notification_service.py  p2p_service.py  recurring_transaction_service.py  report_service.py  transaction_service.py
backend/app/utils/: enums.py  helpers.py
backend/migrations/versions/: 4163bd8cce26_initial_schema_timezone_aware.py
backend/tests/: conftest.py  test_accounts.py
certs/: nginx.crt  (+1 more)
(+192 files in other folders)
