[project]
name = "cash-ctrl-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "django>=6.0.3",
    "djangorestframework>=3.15.2",
    "django-environ>=0.11.2",
    "djangorestframework-simplejwt>=5.3.1",
    "django-cors-headers>=4.3.1",
    "django-filter>=24.2",
    "drf-spectacular>=0.27.2",
    "django-polymorphic>=3.1.0",
    "django-allauth>=65.4.1",
    "dj-rest-auth>=6.0.0",
    "requests>=2.32.3",
    "django-jet-reboot>=1.3.10",
]
