[project]
name = "cash-ctrl"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiosqlite==0.22.1",
    "alembic==1.18.4",
    "asyncpg>=0.31.0",
    "black>=26.3.0",
    "celery>=5.6.2",
    "fastapi>=0.135.1",
    "fastapi-users[sqlalchemy]>=15.0.4",
    "httpx>=0.28.1",
    "isort>=8.0.1",
    "loguru>=0.7.3",
    "passlib[bcrypt]>=1.7.4",
    "pydantic>=2.12.5",
    "pydantic-settings==2.13.1",
    "pyotp>=2.9.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart==0.0.22",
    "qrcode>=8.2",
    "redis>=7.3.0",
    "ruff>=0.15.5",
    "slowapi>=0.1.9",
    "sqlalchemy==2.0.48",
    "user-agents>=2.2.0",
    "uvicorn>=0.41.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
